--- a/trunk/report.bib
+++ b/trunk/report.bib
@@ -284,11 +284,30 @@
                A multi-model based adaptive approach},
   booktitle = {ICRA},
   year      = {2011},
-  pages     = {6143-6149},
-  ee        = {http://dx.doi.org/10.1109/ICRA.2011.5979664},
-  crossref  = {DBLP:conf/icra/2011},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
+  pages     = {6143-6149}
 }
+
+%z16
+
+@article{Lu:1997:GCR:591441.591464,
+ author = {Lu, F. and Milios, E.},
+ title = {Globally Consistent Range Scan Alignment for Environment Mapping},
+ journal = {Auton. Robots},
+ issue_date = {October 1997},
+ volume = {4},
+ number = {4},
+ month = oct,
+ year = {1997},
+ issn = {0929-5593},
+ pages = {333--349},
+ numpages = {17},
+ url = {"http://dx.doi.org/10.1023/A:1008854305733"},
+ doi = {"10.1023/A:1008854305733"},
+ acmid = {591464},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {laser range scanning, mapping, range scan alignment, range scan registration, sensor-based mobile robotics},
+} 
 
 %There exists no eletronic version
 
