--- a/trunk/chapter01.tex
+++ b/trunk/chapter01.tex
@@ -1,12 +1,14 @@
-\section{Driving Support Systems}
+\section{Driving support systems}
 
-In this document we are mainly concerned about driving assistance. However, driving assistance is a vast research field with almost a century of evolution. Such systems aims to support the driver in the action of driving, this support is given in any form: visual alerts, auditory perception, actuators or haptics\cite{riener2010sensor}.
+In this document we are mainly concerned about driving assistance system. Such systems aims to support the driver in the action of driving, this support is given in any form: visual alerts, auditory perception, actuators or haptics\cite{riener2010sensor}.
 
-Since its appearance at the middle 50's, driving assistance has gained several branches, those branches have been heavily studied and currently are the target of many research centers.
+Driving assistance has gained several branches, those branches have been subject of research throughout the years.
 
-Drive-support systems are becoming more and more popular. There exist several reasons, all of them mostly related with reducing \textbf{risk of incidents} and/or increasing the \textbf{confort} of driving. 
+Driving support systems are becoming more and more popular. There exist several reasons: the increase \textbf{risk of incidents} and/or providing more \textbf{comfort} for the drivert.
 
-The former is linked with the cognitive overload in which the human is submited to. Off course the cognitive limitation is not an absolute number, it varies according to several parameters like mental health, type of the channel used (visual, auditory, tactile), amount of information transmitted, etc. A research conducted 2008 had the intend to study the human cognitive limitation for visual (eye) channel, basing this limitation in the saccadic movement of the eye and in the channel information capacity theorem\cite{LautarutisV}. The latter is linked to the anatomy of the instruments and the means used by the driver to perform an activity.
+The former is linked with the cognitive capacity of the human being. Although, cognition is not an absolute number it varies according to several parameters, like mental health, type of sensing mechanism (visual, auditory, tactile), amount of information transmitted, etc. 
+
+A research conducted 2008 studied the human cognitive limitation, only limitation for visual sensing mechanism was studied\cite{LautarutisV}. This researched state a limitation for the human been  basing this limitation in the saccadic movement of the eye and in the channel information capacity theorem. The latter is linked to the anatomy of the instruments and the means used by the driver to perform an activity.
 
 The human eye provides the largest amount of information for the brain. As the human visual sensors gives the major part of the world perception to the brain, it becomes per consequence the most used sensor.
 
@@ -25,7 +27,7 @@ The engineering of those types of systems is not related directly to computer sc
 	\label{fig:sensor:target}
 \end{figure}
 
-Advanced Driver Assistence Systems must to perceive the environment before act. ADAS works just like the human cognition, it requires a mean to perceive the environment before dispatch any cognitive action. In the humanbody the environment perception is addressed by the eyes, although ADAS requires some artificial kind of sensing, that mimics the environment. 
+Advanced Driver Assistence Systems must to perceive the environment before acting. ADAS works just like the human cognition, it requires a mean to perceive the environment before dispatch any cognitive action. In the humanbody the environment perception is addressed by the eyes, although ADAS requires some artificial kind of sensing, that mimics the environment. 
 
 The different ways of perceiving the environment and different types of technology used to achieve characterizes the sensing instruments, usually called \textbf{sensors}.
 
@@ -275,9 +277,13 @@ This model can be extended to a more general model coined as \textit{inference g
 
 \textit{Goal: Why occupancy grid? how its built? }
 
+\subsection{Risk Assessment}
+
 
 
 \subsection{Classification}
+
+Before acting, it is required understand the scene in the first place. 
 
 \textit{Goal: talk about multimodels, importance sampling (or other statistical sampling method), prior map knowledge }
 
